fix(home): more info button not available on mobile

--- a/packages/ui-react/src/components/FeaturedShelf/FeaturedShelf.module.scss
+++ b/packages/ui-react/src/components/FeaturedShelf/FeaturedShelf.module.scss
@@ -226,10 +226,6 @@ $mobile-landscape-height: 100vh;
     }
     > div {
       font-size: 14px;
-
-      > button:nth-child(2) {
-        display: none;
-      }
     }
   }
 
